nomacs 3.10.0
============
- anti-aliasing improved
- animiated WebP support
- PSD lib updated
- new translations: Bosnian, Croation, and Serbian

nomacs 3.8.0
============
- Full PhaseOne Support (Monochrome)
- RAW loader optimized (less RAM & speed-up)
- RAW loading improved (pink pixels reduced)
- MSI installer
- Drag&Drop fixes
- Batch resizing fixed
- Minor bug fixes

- Drag & Drop fixed
- Batch resize fixed
- GPS link fixed
- Translation downloader fixed

nomacs 3.6.1
============
- translations fixed
- LibRaw 0.17.0 -> 0.18.2
- bug reporting moved to github

nomacs 3.6.0
============
- Image adjustments introduced
- Exposure added
- Batch
	- Improved profiles
	- Image adjustments added
	- Settings for batch plugins
- Extended tab functions (thanks to @cornytrace)
- Settings Editor
- Icons for high DPI displays
- Crash on exit fixed for Linux with Qt 5.7.1
- Updates (Windows)
	- Qt 5.5.1 -> 5.7.0
	- OpenCV 3.1 -> 3.2

nomacs 3.4.0
============
- Batch UI reworked
- Batch Profiles added
- Cropping to metadata
- RGB to Gray improved
- Crash on delete fixed
- Slow thumbnail rendering fixed
- Start-up time improved
- RAW/PSD orientation fixed

nomacs 3.2.0
============
- Plugin framework redesigned
- New preferences
- Undo & History dock added
- Statusbar improved (e.g. zoom level)
- All Icons are SVG (UHD monitors)
- Compression added to Batch
- Image transitions extended (swipe)
- Logging added
- Recent files cleaned

nomacs 3.0.0
============
- New online installer (Windows)
- Plugins are now available on Linux
- Full SVG support
- Quick Launch added
- Tiny planet option added
- Batch processing improved
- Signed executable (Windows only)
- Libraries updated (Qt 5.5, OpenCV 3)
- Command line arguments added
- Zoom control improved
- nomacs learned two new languages: Bulgarian and Ukrainian

- new plugin: Page Extraction (detects and/or crops document pages)